# SEC-RAG

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/evals/: __main__.py  golden.yaml  harness.py  results.jsonl
backend/migrations/: 001_init.sql
backend/src/api/: retrieval.py
backend/src/pipeline/: __main__.py  canonicalize.py  chunk.py  companies.py  db.py  edgar.py  embed.py  ingest.py  sections.py  store.py
backend/tests/: conftest.py  fakes.py  test_canonicalize.py  test_chunk.py  test_db.py  test_edgar.py  test_embed.py  test_evals.py  test_ingest.py  test_retrieval.py  test_sanity.py  test_sections.py  test_store.py  test_store_chunks.py
backend/tests/fixtures/: .gitkeep  mini_10k.html  submissions_aapl.json
docs/: design.md
docs/superpowers/plans/: 2026-07-19-phase0-1-ingestion.md  2026-07-19-phase2-retrieval.md
frontend/: README.md
