[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "edgar-answers-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pysbd>=0.3.4",
    "psycopg[binary]>=3.1",
    "tiktoken>=0.7",
    "fastembed>=0.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "db: requires a running Postgres; set TEST_DATABASE_URL to enable",
    "slow: downloads the embedding model; set RUN_SLOW_TESTS=1 to enable",
]
